--- a/apps/my-wedding/public/locales/en/common.json
+++ b/apps/my-wedding/public/locales/en/common.json
@@ -13,7 +13,7 @@
   "Reception": "Reception",
   "Please share in our celebration by joining us for dinner reception at five o'clock in the evening on": "Please share in our celebration by joining us for dinner reception at",
   "Thank you": "Thank you",
-  "FOR SHARING OUR SPECIAL DAY": "FOR SHARING OUR SPECIAL DAY",
+  "For sharing our special day": "For sharing our special day <3",
   "10 . 07 . 2022": "10 . 07 . 2022",
 
   "Next": "Next",
