--- a/apps/my-wedding/public/locales/vn/common.json
+++ b/apps/my-wedding/public/locales/vn/common.json
@@ -8,12 +8,12 @@
   "Tan Binh District, Ho Chi Minh City": "Quận Tân Bình, Tp. Hồ Chí Minh",
 
   "Welcome": "Xin chào",
-  "To our wedding": "đến đám cưới của chúng tôi",
+  "To our wedding": "đến đám cưới của em <3",
   "In dreams and in love there are no impossibilities": "Trong giấc mơ và tình yêu thì không gì là không thể. <3",
   "Reception": "Thư mời",
-  "Please share in our celebration by joining us for dinner reception at five o'clock in the evening on": "Trân trọng kính mời anh/chị đến dự bữa tiệc rượu chung vui cùng gia đình vào lúc",
+  "Please share in our celebration by joining us for dinner reception at five o'clock in the evening on": "Trân trọng kính mời Anh/Chị đến dự bữa tiệc rượu chung vui cùng gia đình",
   "Thank you": "Xin chân thành cảm ơn",
-  "FOR SHARING OUR SPECIAL DAY": "Vì đã chia sẻ niềm hạnh phúc trong ngày đặc biệt này <3",
+  "For sharing our special day": "Vì đã chia sẻ niềm hạnh phúc trong ngày đặc biệt này <3",
   "10 . 07 . 2022": "10 . 07 . 2022",
 
   "Next": "Tiếp tục",
