--- a/apps/my-wedding/public/locales/en/common.json
+++ b/apps/my-wedding/public/locales/en/common.json
@@ -2,7 +2,8 @@
   "Trung & Trâm Wedding": "Trung & Trâm Wedding",
   "Trung & Trâm": "Trung & Trâm",
   "July 10, 2022": "July 10, 2022",
-  "Sunday, July 10th, 2022": "Five o'clock in the evening on Sunday, July 10th, 2022",
+  "Five o'clock in the evening": "Five o'clock in the evening",
+  "Sunday, July 10th, 2022": "Sunday, July 10th, 2022",
   "GALA CENTER": "GALA CENTER",
   "415 Hoang Van Thu Street": "415 Hoang Van Thu Street",
   "Tan Binh District, Ho Chi Minh City": "Tan Binh District, Ho Chi Minh City",
