--- a/apps/my-wedding/public/locales/vn/common.json
+++ b/apps/my-wedding/public/locales/vn/common.json
@@ -2,8 +2,9 @@
   "Trung & Trâm Wedding": "Trung & Trâm Wedding",
   "Trung & Trâm": "Trung & Trâm",
   "July 10, 2022": "Ngày 10 tháng 07 năm 2022",
-  "Sunday, July 10th, 2022": "17 giờ 00 Chủ Nhật, ngày 10 tháng 07 năm 2022",
-  "GALA CENTER": "Trung tâm hội nghị và tiệc cưới \nGALA CENTER",
+  "Five o'clock in the evening": "17 giờ 00 Chủ Nhật",
+  "Sunday, July 10th, 2022": "ngày 10 tháng 07 năm 2022",
+  "GALA CENTER": "Trung tâm tiệc cưới GALA CENTER",
   "415 Hoang Van Thu Street": "Số 415 Hoàng Văn Thụ",
   "Tan Binh District, Ho Chi Minh City": "Quận Tân Bình, Tp. Hồ Chí Minh",
 
