--- a/apps/my-wedding/public/locales/en/common.json
+++ b/apps/my-wedding/public/locales/en/common.json
@@ -23,7 +23,7 @@
   "View Maps": "View Maps",
   "View all photo": "View all photo",
 
-  "This is for case when you don't like using cash": "This is for case when you don't like using cash :(",
+  "This is for case when you don't like using cash": "If you don't like using cash :(",
   "Banking Info": "Banking Info",
   "Bank": "Bank",
   "Bank Name": "Bank Name",
